--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -192,10 +192,10 @@ header {
 }
 .submenu {
 	background:#000;
-	width:180px;
+	width:140px;
 	position:absolute;
-	left:27px;
-	top:80px
+	left:30px;
+	top:58px
 }
 .submenu ul {
 	margin:0 0 0 20px;
@@ -206,7 +206,7 @@ header {
 }
 .submenu a {
 	color:#fff;
-	font-size:26px;
+	font-size:20px;
 	width:100%;
 	display:block
 }
@@ -402,6 +402,7 @@ footer img {
 	cursor:pointer
 }
 .contenedor-info {
+	z-index:10;
 	width:180px
 }
 .contenedor-info a {
